clusters/beryjuio-home/dl-stack/sabnzbd/sabnzbd-exporter.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: sabnzbd-exporter
  name: sabnzbd-exporter
  namespace: dl-stack
spec:
  selector:
    matchLabels:
      app.kubernetes.io/name: sabnzbd-exporter
  template:
    metadata:
      labels:
        app.kubernetes.io/name: sabnzbd-exporter
    spec:
      securityContext:
        runAsUser: 1024
        runAsGroup: 100
        fsGroup: 100
        fsGroupChangePolicy: Always
      containers:
        - name: exporter
          image: proxy.registry.beryju.io/msroest/sabnzbd_exporter:0.1.80
          resources: {}
          ports:
            - containerPort: 9387
              name: metrics
