clusters/beryjuio-home/dl-stack/sabnzbd/sabnzbd-sm.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd-exporter
  namespace: dl-stack
  labels:
    app.kubernetes.io/name: sabnzbd-exporter
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sabnzbd-exporter
  ports:
    - port: 9387
      name: metrics
      targetPort: 9387
