clusters/beryjuio-home/dl-stack/sabnzbd/sabnzbd-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  namespace: dl-stack
  labels:
    app.kubernetes.io/name: sabnzbd
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: sabnzbd
  ports:
    - port: 8080
      name: http
      targetPort: 8080
