clusters/beryjuio-home/dl-stack/sabnzbd/sabnzbd-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sabnzbd
  namespace: dl-stack
spec:
  ingressClassName: istio
  rules:
    - host: sabnzbd.${CLUSTER_NAME}.k8s.beryju.io
      http:
        paths:
          - backend:
              service:
                name: sabnzbd
                port:
                  name: http
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - sabnzbd.${CLUSTER_NAME}.k8s.beryju.io
      secretName: beryjuio-dl-stack-sabnzbd
